--- a/gradeboonk/gradeboonk/gradeboonk.csproj
+++ b/gradeboonk/gradeboonk/gradeboonk.csproj
@@ -42,8 +42,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="assignments.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Section.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
