--- a/gradeboonk/gradeboonk/gradeboonk.csproj
+++ b/gradeboonk/gradeboonk/gradeboonk.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="assignments.cs" />
+    <Compile Include="Gradebook.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Section.cs" />
